--- a/themes/Flat-Remix-GTK-Cyan-Light-Solid/gtk-4.0/gtk.css
+++ b/themes/Flat-Remix-GTK-Cyan-Light-Solid/gtk-4.0/gtk.css
@@ -118,7 +118,7 @@ label {
     outline-offset: -2px; }
   label > selection {
     background-color: #0ccfd9;
-    color: #ffffff; }
+    color: #000000; }
   label:disabled {
     color: #aeb0b6; }
     button label:disabled {
@@ -596,7 +596,7 @@ row:selected button {
   border-color: #088a91; }
 
 row:selected button.sidebar-button:not(:active):not(:checked):not(:hover):not(disabled), row:selected button.flat:not(:active):not(:checked):not(:hover):not(disabled) {
-  color: #ffffff;
+  color: #000000;
   border-color: transparent; }
   row:selected button.sidebar-button:not(:active):not(:checked):not(:hover):not(disabled):backdrop, row:selected button.flat:not(:active):not(:checked):not(:hover):not(disabled):backdrop {
     color: #f7f7f7; }
@@ -1109,23 +1109,23 @@ link {
   link:visited {
     color: #077378; }
     *:selected button.link:visited, *:selected link:visited {
-      color: #9cc7c9; }
+      color: #032e30; }
   button.link:hover,
   link:hover {
     color: #0ccfd9; }
     *:selected button.link:hover, *:selected link:hover {
-      color: #e7fafb; }
+      color: #011516; }
   button.link:active,
   link:active {
     color: #09a1a9; }
     *:selected button.link:active, *:selected link:active {
-      color: #ceecee; }
+      color: #022022; }
   button.link:disabled,
   link:disabled {
     color: rgba(89, 89, 89, 0.8); }
   button.link:selected, *:selected button.link,
   link:selected, *:selected link {
-    color: #ceecee; }
+    color: #022022; }
 
 link {
   transition-property: outline, outline-width, outline-offset, outline-color;
@@ -1610,7 +1610,7 @@ treeview.view {
     color: #aeb0b6; }
     columnview.view:disabled:selected,
     treeview.view:disabled:selected {
-      color: #6de2e8; }
+      color: #077c82; }
       columnview.view:disabled:selected:backdrop,
       treeview.view:disabled:selected:backdrop {
         color: #53dbe2; }
@@ -1650,10 +1650,10 @@ treeview.view {
       color: black; }
     columnview.view.expander:selected,
     treeview.view.expander:selected {
-      color: #b6f1f4; }
+      color: #043e41; }
       columnview.view.expander:selected:hover,
       treeview.view.expander:selected:hover {
-        color: #ffffff; }
+        color: #000000; }
     columnview.view.expander:checked,
     treeview.view.expander:checked {
       -gtk-icon-source: -gtk-icontheme("pan-down-symbolic"); }
@@ -1679,7 +1679,7 @@ treeview.view {
     columnview.view.trough:selected:focus, columnview.view.trough:selected,
     treeview.view.trough:selected:focus,
     treeview.view.trough:selected {
-      background-color: rgba(255, 255, 255, 0.3); }
+      background-color: rgba(0, 0, 0, 0.3); }
   columnview.view > header > button,
   treeview.view > header > button {
     color: #abadb3;
@@ -2157,7 +2157,7 @@ switch {
   headerbar switch {
     background-color: #dedede; }
   switch:checked {
-    color: #ffffff;
+    color: #000000;
     border-color: #088a91;
     background-color: #0ccfd9; }
   switch:disabled {
@@ -2350,7 +2350,7 @@ radio {
     background-image: linear-gradient(to bottom, white 20%, white 90%);
     border-color: #c2c2c2;
     box-shadow: 0 1px rgba(0, 0, 0, 0.05);
-    color: #ffffff; }
+    color: #000000; }
   check:hover,
   radio:hover {
     background-image: image(#f2f2f2); }
@@ -2361,14 +2361,14 @@ radio {
   check:disabled,
   radio:disabled {
     box-shadow: none;
-    color: rgba(255, 255, 255, 0.7); }
+    color: rgba(0, 0, 0, 0.7); }
   check:checked,
   radio:checked {
     background-clip: border-box;
     background-image: linear-gradient(to bottom, #0de6f1 20%, #0ccfd9 90%);
     border-color: #077378;
     box-shadow: 0 1px rgba(0, 0, 0, 0.05);
-    color: #ffffff; }
+    color: #000000; }
   check:checked:hover,
   radio:checked:hover {
     background-image: linear-gradient(to bottom, #20e8f3 10%, #0de1ec 90%); }
@@ -2379,14 +2379,14 @@ radio {
   check:checked:disabled,
   radio:checked:disabled {
     box-shadow: none;
-    color: rgba(255, 255, 255, 0.7); }
+    color: rgba(0, 0, 0, 0.7); }
   check:indeterminate,
   radio:indeterminate {
     background-clip: border-box;
     background-image: linear-gradient(to bottom, #0de6f1 20%, #0ccfd9 90%);
     border-color: #077378;
     box-shadow: 0 1px rgba(0, 0, 0, 0.05);
-    color: #ffffff; }
+    color: #000000; }
   check:indeterminate:hover,
   radio:indeterminate:hover {
     background-image: linear-gradient(to bottom, #20e8f3 10%, #0de1ec 90%); }
@@ -2397,7 +2397,7 @@ radio {
   check:indeterminate:disabled,
   radio:indeterminate:disabled {
     box-shadow: none;
-    color: rgba(255, 255, 255, 0.7); }
+    color: rgba(0, 0, 0, 0.7); }
   row:selected check, row:selected radio {
     border-color: #077378; }
   .osd check, .osd radio {
@@ -2453,7 +2453,7 @@ radio {
 treeview.view check:selected:focus, treeview.view check:selected,
 treeview.view radio:selected:focus,
 treeview.view radio:selected {
-  color: #ffffff;
+  color: #000000;
   border-color: #088a91; }
 
 /************
@@ -3199,7 +3199,7 @@ columnview row:not(:selected) cell editablelabel.editing:focus-within {
   outline: 2px solid #0ccfd9; }
 
 columnview row:not(:selected) cell editablelabel.editing text selection {
-  color: #ffffff;
+  color: #000000;
   background-color: #0ccfd9; }
 
 /*******************************************************
@@ -3469,7 +3469,7 @@ placessidebar .navigation-sidebar > row {
     color: #19a187;
     box-shadow: inset 0 1px #19a187, inset 0 -1px #19a187; }
     placessidebar .navigation-sidebar > row:drop(active):not(:disabled):selected {
-      color: #ffffff;
+      color: #000000;
       background-color: #19a187; }
 
 placesview .server-list-button > image {
@@ -3637,7 +3637,7 @@ colorswatch {
       border-color: rgba(0, 0, 0, 0.6);
       box-shadow: none; }
   row:selected colorswatch {
-    box-shadow: 0 0 0 2px #ffffff; }
+    box-shadow: 0 0 0 2px #000000; }
   colorswatch#editor-color-sample {
     border-radius: 4px; }
     colorswatch#editor-color-sample > overlay {
@@ -3740,13 +3740,13 @@ treeview.view:selected, row:selected, calendar > grid > label.day-number:selecte
   entry > text > selection, modelbutton.flat:selected, spinbutton:not(.vertical) > text > selection, spinbutton.vertical > text > text > selection, spinbutton.vertical > text > selection, columnview.view:selected:focus, columnview.view:selected,
   treeview.view:selected:focus,
   treeview.view:selected, row:selected, calendar > grid > label.day-number:selected {
-    color: #ffffff; }
+    color: #000000; }
     label:disabled > selection, label:disabled:selected, .view:disabled:selected,
     textview > text:disabled:selected:focus,
     textview > text:disabled:selected, textview > text > selection:disabled, iconview:disabled:selected:focus, iconview:disabled:selected, flowbox > flowboxchild:disabled:selected, gridview > child:disabled:selected,
     entry > text > selection:disabled, modelbutton.flat:disabled:selected, spinbutton:not(.vertical) > text > selection:disabled, spinbutton.vertical > text > text > selection:disabled, spinbutton.vertical > text > selection:disabled, columnview.view:disabled:selected,
     treeview.view:disabled:selected, row:disabled:selected, calendar > grid > label.day-number:disabled:selected {
-      color: #86e7ec; }
+      color: #06686d; }
 
 .monospace {
   font-family: monospace; }
@@ -3884,7 +3884,7 @@ emoji-completion-row > box {
 emoji-completion-row:focus,
 emoji-completion-row:hover {
   background-color: #0ccfd9;
-  color: #ffffff; }
+  color: #000000; }
 
 emoji-completion-row emoji:focus,
 emoji-completion-row emoji:hover {
@@ -4023,7 +4023,7 @@ radio {
   radio:indeterminate {
     background-image: linear-gradient(to bottom, #0ccfd9 20%, #0bc6cf 90%);
     border-color: #088a91;
-    color: #ffffff; }
+    color: #000000; }
     check:checked, check:checked:active, check:indeterminate, check:indeterminate:active,
     radio:checked,
     radio:checked:active,
@@ -4300,7 +4300,7 @@ base background color of selections */
 @define-color theme_selected_bg_color #0ccfd9;
 /*
 text/foreground color of selections */
-@define-color theme_selected_fg_color #ffffff;
+@define-color theme_selected_fg_color #000000;
 /*
 base background color of insensitive widgets */
 @define-color insensitive_bg_color #fdfdfd;
@@ -4327,7 +4327,7 @@ base background color of selections on backdrop windows */
 @define-color theme_unfocused_selected_bg_color #0ccfd9;
 /*
 text/foreground color of selections on backdrop windows */
-@define-color theme_unfocused_selected_fg_color #ffffff;
+@define-color theme_unfocused_selected_fg_color #000000;
 /*
 insensitive color on backdrop windows*/
 @define-color unfocused_insensitive_color #d9d9d9;
