--- a/src/sass/gtk3/_common-tweaks.scss
+++ b/src/sass/gtk3/_common-tweaks.scss
@@ -311,7 +311,7 @@ headerbar {
       background: transparent;
       box-shadow: none;
       border-color: $backdrop_borders_color;
-      background: $shadow_color;
+      background: if($variant == 'light', darken($bg_color, 20%), lighten($bg_color, 20%));
     }
   }
 
@@ -571,7 +571,7 @@ row {
     background-color: $bg_color;
     color: $text_color;
     box-shadow: inset 0 0 0 9999px $menu_selected_color,
-                inset 0 0 0 3px $base_color;
+                inset 0 0 0 3px $bg_color;
     }
   }
 }
@@ -632,13 +632,13 @@ decoration {
   $_top_window_radius: $window_radius+$_border_width;
   $_bottom_window_radius: min($button_radius+$_border_width, 6px);
   border-radius: $_top_window_radius $_top_window_radius $_bottom_window_radius $_bottom_window_radius;
-  border: $_border_width solid $base_color;
+  border: $_border_width solid $bg_color;
   border-top-width: 0;
   border-bottom-width: 2px;
   background: if($transparency=='true', transparent, $bg_color);
 
   @if $transparency=='true' {
-    border-color: $headerbar_color $headerbar_color $base_color;
+    border-color: $headerbar_color $headerbar_color $bg_color;
   }
 
   box-shadow: 0 2px 8px 0 transparentize(black, 0.6),
