GTK3: fix lightdm button color (fixes #129)

--- a/src/sass/gtk3/_applications.scss
+++ b/src/sass/gtk3/_applications.scss
@@ -268,7 +268,7 @@ wnck-pager {
 
       button {
         border: 0;
-        color: white;
+        color: $selected_fg_color;
         text-shadow: none;
       }
 
