--- a/themes/Flat-Remix-GTK-White-Darkest/gtk-3.0/gtk.css
+++ b/themes/Flat-Remix-GTK-White-Darkest/gtk-3.0/gtk.css
@@ -6231,7 +6231,7 @@ wnck-pager {
     box-shadow: inset 0 -4px rgba(0, 0, 0, 0.2), inset 0 1px 2px rgba(0, 0, 0, 0.27); }
     .lightdm-gtk-greeter #login_window #buttonbox_frame button {
       border: 0;
-      color: white;
+      color: #000000;
       text-shadow: none; }
     .lightdm-gtk-greeter #login_window #buttonbox_frame #cancel_button {
       background: rgba(0, 0, 0, 0.27);
