--- a/src/sass/gtk4/_common-tweaks.scss
+++ b/src/sass/gtk4/_common-tweaks.scss
@@ -1,5 +1,4 @@
 $_menu_shadow: 0 1px 6px transparentize(black, if($variant == 'light', .85, .5));
-$_widget_inset_shadow: inset 0 3px 10px -4px $shadow_color, 0 1px rgba(255, 255, 255, .05);
 $_wm_border: if($variant=='light', transparentize(black, 0.9), transparentize($borders_color, 0.25));
 
 // Optional compact sizes for buttons, headerbar and headerbar widgets
@@ -23,21 +22,9 @@ button {
   @at-root %button_active,
   &:active,
   &:checked {
-    background: $dark_fill;
-    box-shadow: $_widget_inset_shadow;
+    @include button(active);
 
     &:backdrop { box-shadow: none; }
-  }
-
-  &:disabled { box-shadow: none; }
-
-  &.flat:not(.link) {
-    &:hover {
-      @extend %button_active;
-      transition: none;
-    }
-
-    &:backdrop { @include button(undecorated); }
   }
 
   &.image-button {
@@ -60,7 +47,6 @@ entry {
   %entry_basic, & { min-height: $_entry_height; }
 
   &:not(:disabled) {
-    box-shadow: $_widget_inset_shadow;
     background: if($variant=='dark', $dark_fill, $bg_color);
   }
 
@@ -79,8 +65,6 @@ headerbar entry {
  * Switch *
  **********/
 switch {
-  box-shadow: $_widget_inset_shadow;
-
   slider { @extend %slider; }
 
   &:hover slider { @extend %slider_active; }
@@ -118,8 +102,6 @@ radio {
 
   background-image: linear-gradient(to bottom, $_c 20%, darken($_c, 2%) 90%);
   border-color: $alt_borders_color;
-
-  &, &:active { box-shadow: $_widget_inset_shadow; }
 
   &:checked, &:indeterminate {
     background-image: linear-gradient(to bottom, $checkradio_bg_color 20%, darken($checkradio_bg_color, 2%) 90%);
@@ -197,7 +179,6 @@ windowcontrols {
     min-width: 0;
     min-height: 0;
     border: 1px solid $alt_borders_color;
-    box-shadow: $_widget_inset_shadow;
     -gtk-icon-shadow: none;
     transition: all .2s;
 
